[レイアウト調整]

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,4 +2,6 @@
 <p>Bookers ではさまざまな書籍に関するあなたの意見や</br>
 印象を共有し交換することができます</p>
 
-<%= link_to "start", books_path %>
+<div class="top">
+  <%= link_to "start", books_path %>
+</div>
